--- a/https-demo/service-worker.html
+++ b/https-demo/service-worker.html
@@ -6,5 +6,10 @@
 </head>
 <body>
 	<h4>Service Worker</h4>
+
+	<img src="../images/timg.jpg" alt="">
+	<script>
+		navigator.serviceWorker&&navigator.serviceWorker.register("sw-demo-cache.js");
+	</script>
 </body>
 </html>
